stop handling the font shorthand as a whole: its composing properties have incompatible priorities.

BUG: 139205


svn path=/trunk/KDE/kdelibs/; revision=618828